# fossil-crabdb

./: CMakeLists.txt  README.md  SECURITY.md  build.gradle.kts  conanfile.py  meson.build
.github/: .gitignore
.github/ciimage/: Dockerfile.fedora
.github/workflows/: gradle_cd.yml  gradle_ci.yml  gradle_publish.yml  meson_ci.yml
code/logic/: CMakeLists.txt  ai.c  bluecrab.c  cacheshell.c  crabdb.c  crablogs.c  crabql.c  database.c  datastore.c  docshell.c  fileshell.c  internal.c  introspect.c  logging.c  meson.build  myshell.c  namespace.c  noshell.c  query.c  rest.c  sci.c  search.c  storage.c  store.c  sync.c  timeshell.c
code/logic/fossil/: CrabDB.kt  Database.kt  Namespace.kt
code/logic/fossil/crabdb/: ai.h  bluecrab.h  cacheshell.h  crabdb.h  crablogs.h  crabql.h  database.h  datastore.h  docshell.h  fileshell.h  framework.h  internal.h  introspect.h  logging.h  myshell.h  namespace.h  noshell.h  query.h  rest.h  sci.h  search.h  storage.h  store.h  storeage.h  sync.h  timeshell.h
code/tests/: CrabDBTest.kt  FossilCrabDBTest.kt  FossilCrabNamespaceTest.kt  meson.build  test_catch.c  test_crabai.c  test_crabdb.c  test_crabql.c  test_crabsci.c  test_crabsearch.c  test_crabsync.c  test_database.c  test_datastore.c  test_namespace.c  test_operations.c  test_query.c  test_script.c
code/tests/cases/: test_cacheshell.c  test_cacheshell.cpp  test_crabdb.c  test_crabdb.cpp  test_crabql.c  test_crabql.cpp  test_crabsearch.c  test_crabsearch.cpp  test_crabsync.c  test_crabsync.cpp  test_database.c  test_database.cpp  test_fileshell.c  test_fileshell.cpp  test_myshell.c  test_myshell.cpp  test_noshell.c  test_noshell.cpp  test_timeshell.c  test_timeshell.cpp
code/tests/data/: delete_command.crabql  insert_commands.crabql  meson.build  select_command.crabql  sort_key_command.crabql  test_condition_met.crabql  test_condition_not_met.crabql  test_invalid.txt  test_unknown_command.crabql  test_valid.crabql  update_command.crabql
code/tests/tools/: generate-runner.py
subprojects/: fossil-test.wrap
